<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_title"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/change_email_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_change_email"
        android:textAlignment="textStart"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <Button
        android:id="@+id/change_password_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_change_password"
        android:textAlignment="textStart"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <Button
        android:id="@+id/sign_out_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_exit"
        android:textAlignment="textStart"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>


    <Button
        android:id="@+id/delete_account_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/button_delete_account"
        android:textColor="@android:color/holo_red_dark"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>
</LinearLayout>